--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://harshitha:MPiNCVGNVMsZXcJw@cluster0.zgiqplh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb://localhost:27017/storytimebackend"
 NODE_ENV=development
 JWT_SECRET=ebrjt234627364%erterskdbkwe
 SPOTIFY_CLIENT_ID=ad3f6a2411064343875ee994a8c3b802
